<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey">

    <ImageView
        android:layout_width="0dp"
        android:layout_height="200dp"
        android:src="@drawable/tic_tac_toe"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:scaleType="fitXY"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="45dp"
        android:contentDescription="@string/game_logo"
        android:id="@+id/imageView" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="5dp"
        android:gravity="center"
        android:layout_marginBottom="8dp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintVertical_bias="0.3">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/highest_score"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/zero"
            android:textColor="@color/colorPrimary"
            android:textSize="22sp"
            android:textStyle="bold"
            android:gravity="center"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:id="@+id/highest_score"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="250dp"
        android:layout_height="55dp"
        android:id="@+id/frameLayout"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="41dp"
        app:layout_constraintLeft_toLeftOf="parent">

        <Button
            android:id="@+id/play_btn"
            android:layout_width="250dp"
            android:layout_height="55dp"
            android:background="@drawable/ripple_effect_color_primary_oval"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/let_s_play"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </FrameLayout>

    <TextView
        android:id="@+id/textView"
        android:layout_width="45dp"
        android:layout_height="0dp"
        android:background="@drawable/play_button"
        android:contentDescription="@string/play_icon"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="10dp"
        app:layout_constraintBottom_toBottomOf="@+id/frameLayout"
        android:layout_marginTop="5dp"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="5dp"
        app:layout_constraintLeft_toLeftOf="@+id/frameLayout"
        app:layout_constraintTop_toTopOf="@+id/frameLayout"
        android:layout_marginLeft="10dp" />


</android.support.constraint.ConstraintLayout>
