<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:paddingTop="16dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/dash_board"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintLeft_creator="1">

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:id="@+id/user1_image"
            android:src="@drawable/x"
            android:contentDescription="@string/player_one_image"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user1_name"
            android:text="@string/player_1"
            android:textColor="@color/white"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:textSize="18sp"
            android:gravity="center"/>

        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/user1_score"
            android:text="@string/zero"
            android:textColor="@color/black"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:background="@color/white"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/user2_score"
            android:text="@string/zero"
            android:textColor="@color/black"
            android:layout_marginLeft="20dp"
            android:layout_marginStart="20dp"
            android:background="@color/white"
            android:gravity="center"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/user2_name"
            android:text="@string/player_2"
            android:textColor="@color/white"
            android:layout_marginLeft="15dp"
            android:layout_marginStart="15dp"
            android:textSize="18sp"
            android:gravity="center"/>

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:id="@+id/user2_image"
            android:src="@drawable/o"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:contentDescription="@string/player_two_image"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/check_places"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dash_board"
        tools:layout_constraintBottom_creator="1"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toTopOf="@+id/game_btns">

        <LinearLayout
            android:id="@+id/places_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/place1"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/white"
                android:contentDescription="@string/check_place"
                android:onClick="playGame"
                android:scaleType="fitXY"
                android:padding="4dp"/>

            <ImageView
                android:id="@+id/place2"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/white"
                android:contentDescription="@string/check_place"
                android:onClick="playGame"
                android:scaleType="fitXY"
                android:padding="4dp"/>

            <ImageView
                android:id="@+id/place3"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:background="@color/white"
                android:contentDescription="@string/check_place"
                android:onClick="playGame"
                android:scaleType="fitXY"
                android:padding="4dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/places_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/places_1">

            <ImageView
                android:id="@+id/place4"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="15dp"
                android:background="@color/white"
                android:contentDescription="@string/check_place"
                android:onClick="playGame"
                android:scaleType="fitXY"
                android:padding="4dp"/>

            <ImageView
                android:id="@+id/place5"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/white"
                android:contentDescription="@string/check_place"
                android:onClick="playGame"
                android:scaleType="fitXY"
                android:padding="4dp"/>

            <ImageView
                android:id="@+id/place6"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:background="@color/white"
                android:contentDescription="@string/check_place"
                android:onClick="playGame"
                android:scaleType="fitXY"
                android:padding="4dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/places_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@+id/places_2">

            <ImageView
                android:id="@+id/place7"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="15dp"
                android:background="@color/white"
                android:contentDescription="@string/check_place"
                android:onClick="playGame"
                android:scaleType="fitXY"
                android:padding="4dp"/>

            <ImageView
                android:id="@+id/place8"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_marginEnd="10dp"
                android:layout_marginRight="10dp"
                android:background="@color/white"
                android:contentDescription="@string/check_place"
                android:onClick="playGame"
                android:scaleType="fitXY"
                android:padding="4dp"/>

            <ImageView
                android:id="@+id/place9"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:background="@color/white"
                android:contentDescription="@string/check_place"
                android:onClick="playGame"
                android:scaleType="fitXY"
                android:padding="4dp"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/game_btns"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/check_places"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="12dp">

        <Button
            android:id="@+id/new_game_btn"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/new_game"
            android:background="@drawable/ripple_effect_color_primary"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:textStyle="bold"/>

        <Button
            android:id="@+id/reset_btn"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:text="@string/reset"
            android:textAlignment="center"
            android:background="@drawable/ripple_effect_color_accent"
            android:textColor="#fff"
            style="@style/Widget.AppCompat.Button.ButtonBar.AlertDialog"
            android:textStyle="bold"/>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>
